2004-06-02  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b173

	* Fix: Config wizard - Using a valid admin account would log you 
	  in, even with a bad password.

2004-06-03 Jens Tkotz <jens@peino.de>  1.4.4-cvs-b172

	* Change: Removed Caption for Custom Fields

	* Change: dos2unix setup/ folder

	* Change: Layout of setup/login.inc

	* Fix: login.inc didnt recognized a new login after logout from Gallery 
	

2004-06-02  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b171

	* Change: functionalize login requirement to configLogin() in
	  functions.inc with a single parameter of "basename(__FILE__)"
	  so that it can tell which file it's posting back to.

	* Change: Add session support to setup/init.php so that the admin
	  only has to log in once, instead of once for each php module.

	* Change: Add authorization requirement to all setup/* modules
	  (excluding frame_test, since there's no real reason)

	* Change: Removed configure.bat/sh and secure.bat/sh from manifest.inc
	  (I don't think this matters?  They'd be removed on the manifest rebuild
	  anyway, right?)

2004-06-02 Jens Tkotz <jens@peino.de>  1.4.4-cvs-b170

	* Change: Tweaked publish_XP Docs

	* Fix: Removed Warning in search when Gallery is embedded

2004-06-02  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b169

	* Change: Add a method for admin password recovery -
	  If the file "setup/resetadmin" exists, the login requirement
	  is bypassed

	* Change: Remove the permissions check from gallerySanityCheck()

	* Change: Remove configure.(bat|sh) and secure.(bat|sh)

	* Change: Add warning to write.inc warning user that (if it exists)
	  the Gallery configuration will not be secure until they remove "resetadmin"

2004-06-02  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b168

	* Change:  Add user security to config wizard (!!)
	  If a Gallery has been configured, require the user to login as
	  an admin before allowing them to reconfigure using the config wizard.