@@ -1,3 +1,7 @@
+2004-06-02 Don Willingham <donwillingham@users.sf.net>  1.4.4-cvs-b174
+
+	* Fix: Bug#962076, add "watermark" to "admin options" drop down menu.
+
 2004-06-02  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b173
 
 	* Fix: Config wizard - Using a valid admin account would log you 
